--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tp-link-cve"]
 	path = tp-link-cve
 	url = git@github.com:Chapoly1305/tp-link-cve.git
+[submodule "Nordic Semiconductor/CVE-2023-46870"]
+	path = Nordic Semiconductor/CVE-2023-46870
+	url = git@github.com:Chapoly1305/CVE-2023-46870.git
